--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    @apply bg-gray-50
+
+.navLink {
+  @apply hover:text-green-900 transition duration-150
+}
+
+/* sales page  */
+
+.inputStyle {
+  margin-right: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.btnStyle {
+  padding: 8px 12px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.tableStyle {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.tableStyle th, .tableStyle td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
 }
