--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,18 @@
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  @apply mb-2;
+}
+
+.inputStyle:focus {
+  outline: none;
+  border-color: #048b48;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
 .btnStyle {
+  @apply bg-green-700;
   padding: 8px 12px;
-  background-color: #007bff;
   color: white;
   border: none;
   border-radius: 4px;
