--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .navLink {
   @apply hover:text-green-900 transition duration-150
 }
 
-/* sales page  */
+/* >>>>>>>>> SALES PAGE  */
 
 .inputStyle {
   margin-right: 10px;
@@ -23,23 +22,113 @@
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
+/* >>>>>>>>> BUTTONS STYLE */
+
 .btnStyle {
-  @apply bg-green-700;
+  @apply bg-green-700 text-white border-none;
   padding: 8px 12px;
-  color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
+.btnStyleNoBg {
+  @apply text-green-700 border-none px-8 cursor-pointer;
+}
+
+.btnAction {
+  @apply cursor-pointer py-2 px-4 rounded mr-2
+}
+
+.info {
+  @apply text-green-600 hover:bg-green-500 hover:text-green-50 transition duration-100
+}
+
+.warn {
+  @apply text-slate-600 hover:bg-slate-500 hover:text-slate-50 transition duration-100
+}
+
+/* TABLE STYLE */
 .tableStyle {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
+  @apply table-auto rounded w-full relative overflow-x-auto sm:rounded-lg shadow-md mt-10 mb-10 bg-white
+}
+
+.tableStyle thead {
+  @apply text-xs text-green-800 uppercase bg-green-50
 }
 
 .tableStyle th, .tableStyle td {
-  border: 1px solid #ccc;
-  padding: 8px;
+  @apply py-2 px-4;
   text-align: left;
+}
+
+/* >>>>>>>>> FILTERS STYLE */
+
+/* Estilo base dos filtros */
+.filterStyle {
+  @apply mb-4 w-full rounded-lg shadow-md p-3 flex flex-wrap gap-4 bg-white;
+}
+
+/* Estilo de input e select dentro dos filtros */
+.filterStyle input,
+.filterStyle select {
+  @apply border rounded px-1 py-1 text-gray-600 transition duration-200 ease-in-out;
+}
+
+/* Efeito ao focar */
+.filterStyle input:focus,
+.filterStyle select:focus {
+  outline: none;
+  @apply bg-white border-green-400 shadow shadow-green-100;
+}
+
+/* Estilo para os selects */
+.filterStyle select {
+  @apply cursor-pointer bg-white;
+}
+
+/* Opções dos selects ao passar o mouse */
+.filterStyle option:hover
+.filterStyle option:focus  {
+  @apply bg-green-200;
+}
+
+/* Botão padrão dentro dos filtros */
+.filterStyle button {
+  @apply bg-green-700 text-white px-4 py-2 rounded cursor-pointer transition duration-200;
+}
+
+/* Hover no botão */
+.filterStyle button:hover {
+  @apply bg-green-800;
+}
+
+
+/* >>>>>>>>> FORM STYLE */
+.formStyle {
+  @apply bg-white p-6 mt-4 rounded-lg shadow-md max-w-lg mx-auto flex flex-col gap-4;
+}
+
+.formStyle label {
+  @apply block text-sm font-medium text-gray-700 mb-1;
+}
+
+.formStyle input,
+.formStyle textarea,
+.formStyle select {
+  @apply w-full border border-gray-200 rounded px-4 py-2 text-gray-700 transition duration-200 ease-in-out bg-white;
+}
+
+.formStyle input:focus,
+.formStyle select:focus,
+.formStyle textarea:focus {
+  @apply outline-none bg-white border-green-400 shadow shadow-green-100;
+}
+
+.formStyle button {
+  @apply bg-green-700 text-white px-4 py-2 rounded cursor-pointer transition duration-200;
+}
+
+.formStyle button:hover {
+  @apply bg-green-800;
 }
